@@ -3,6 +3,8 @@
 	* Make dcpomatic_create assign a default name if none
 	is specified.  Fix dcpomatic_create help.
 
+	* Add --no-sign and --no-use-isdcf-name to dcpomatic_create.
+
 2015-08-05  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.1.35 released.
